[package]
name = "dbfs"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
lto = false

[features]
integration_testing = []

[dependencies]
futures = "0.3.31"
sqlx = { version = "0.8.2", features = ["chrono", "mysql", "runtime-tokio"] }
tokio = { version = "1.40.0", features = ["full"] }
argp = "0.3.0"
fuser = "0.14.0"
libc = "0.2.51"
serial_test = "3.1.1"
const_format = "0.2.33"

